--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,8 @@ body {
     margin: 0;
     padding: 0;
 }
-.page-heading {
-    text-align: center;
-    font-weight: bold;
-    font-size: 36px;
-    margin-top: 30px;
-    margin-bottom: 10px;
-    color: #333;
-}
+
+
 .main-title {
     text-align: center;
     font-weight: bold;
@@ -32,6 +26,25 @@ body {
     .main-title {
         font-size: 20px;
     }
+}
+
+#search-input {
+    width: 300px;
+    padding: 8px;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    font-size: 16px;
+    margin: 20px auto;
+    display: block;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+.page-heading {
+    text-align: center;
+    font-weight: bold;
+    font-size: 36px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: #333;
 }
 
 
