cahnging the backgroud color and also my index file not readong my json file

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    background-color: #e75656;
     margin: 0;
     padding: 0;
 }
