Upoding the background color diffrent

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #e75656;
+    background-color: #a1efc7;
     margin: 0;
     padding: 0;
 }
