--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #a1efc7;
+    background-color: #faf8f5;
     margin: 0;
     padding: 0;
 }
